--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
     const App = () => {
       const [query, setQuery] = useState('');
-      const [response, setResponse] = useState({ text: '', imageUrl: '', audioUrl: '' });
+      const [response, setResponse] = useState({ text: '', imageUrl: '', videoUrl: '' });
       const [loading, setLoading] = useState(false);
 
       const askTutor = async () => {
@@ -33,8 +33,13 @@
           if (!res.ok) throw new Error(`HTTP error! Status: ${res.status}`);
           const data = await res.json();
           setResponse(data);
-          if (data.audioUrl) {
-            const audio = new Audio(data.audioUrl);
+          if (data.videoUrl) {
+            const video = document.createElement('video');
+            video.src = data.videoUrl;
+            video.controls = true;
+            video.play();
+          } else if (data.imageUrl) {
+            const audio = new Audio(data.imageUrl.replace('image', 'audio')); // Placeholder for audio
             audio.play();
           }
         } catch (error) {
@@ -54,7 +59,7 @@
                 type="text"
                 value={query}
                 onChange={(e) => setQuery(e.target.value)}
-                placeholder="Ask Areola (e.g., What is photosynthesis?)"
+                placeholder="Ask Areola (e.g., !wiki Donald Trump or !video Futuristic city)"
                 className="flex-1 p-3 rounded-lg bg-gray-800 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-pink-500"
               />
               <button
@@ -68,7 +73,11 @@
             <div className="bg-gray-800 p-4 rounded-lg shadow-lg">
               {response.text && <p className="mb-4 text-gray-300">{response.text}</p>}
               {response.imageUrl && <img src={response.imageUrl} alt="Generated" className="mt-2 rounded-lg" />}
-              {response.audioUrl && <audio controls src={response.audioUrl} className="mt-2 w-full" />}
+              {response.videoUrl && (
+                <video controls src={response.videoUrl} className="mt-2 w-full rounded-lg" autoPlay>
+                  Your browser does not support the video tag.
+                </video>
+              )}
             </div>
           </div>
         </div>
@@ -87,4 +96,3 @@
       to { text-shadow: 0 0 10px #ec4899, 0 0 20px #ec4899, 0 0 30px #ec4899; }
     }
   </style>
-</html>
